--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,14 @@ img {
 
 .hero {
     background-color: var(--background-hero-color);
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4), 
+        rgba(47, 48, 58, 0.4)
+        ), 
+        url(../images/hero-bg.jpg) ;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     text-align: center;
     padding-top: 200px;
     padding-bottom: 200px;
